<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"/>


    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:background="@color/blackop"
        android:contentDescription="@string/c13"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/text1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:background="@color/blackop"
        android:contentDescription="@string/c11"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1"
        tools:ignore="MissingConstraints,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:background="@color/blackop"
        android:contentDescription="@string/c12"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@id/text1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/blackop"
        android:contentDescription="@string/c22"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/blackop"
        android:contentDescription="@string/c23"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/blackop"
        android:contentDescription="@string/c31"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/blackop"
        android:contentDescription="@string/c32"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/blackop"
        android:contentDescription="@string/c33"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button6"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/blackop"
        android:contentDescription="@string/c21"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/button8"
        android:text="@string/turnx"
        android:textSize="30sp"
        android:textColor="@color/purple_200"
        android:textAlignment="center" />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/purple_200"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/purple_200"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>